Index.html has modified

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
           <table class="table table-striped">
             <thead class="bg-dark text-light">
               <tr>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
+                <th scope="col">Book Name</th>
+                <th scope="col">Author name</th>
+                <th scope="col">Book Type</th>
               </tr>
             </thead>
             <tbody id="tableBody"></tbody>
